--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="main.js"></script>
-    <title>Hello World!</title>
+    <title>RSS</title>
 </head>
-<body>
-    
-</body>
+<main id="content">
+    <h1>Ringzero Webring Aggregator</h1>
+    <p>Hello World!</p>
+</main>
 </html>
