--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <script src="main.js"></script>
     <title>RSS</title>
 </head>
-<main id="content">
-    <h1>Ringzero Webring Aggregator</h1>
-    <p>Hello World!</p>
+<h1>Webring Aggregator</h1>
+<main id="content"></main>
+
+
 </main>
 </html>
