urls.json added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <script src="main.js"></script>
     <title>RSS</title>
 </head>
-<h1>Webring Aggregator</h1>
+<h1>RingZero</h1>
+<p> Merveilles Webring Aggrigator. </p>
+<P> Search with Lieu </P>
 <main id="content"></main>
 
 
