--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RingZero</title>
-    <script src="server.js"></script>
+    <script src="fetch.js"></script>
 </head>
 <body>
     
