Close to finalizing

--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RingZero</title>
+    <script src="linksHandler.js"></script>
 </head>
 <body>
+    <center>
+        <h1> Auggar </h1>
+        <h3> The Merveilles webring aggregator </h3>
     <main id="content">
-        <p> AAAAAAAAAAAAAAAAAH </p>
+
     </main>
+</center>
 </body>
 </html>
