--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RingZero</title>
+    <title>Auggar</title>
     <script src="linksHandler.js"></script>
 </head>
 <body>
     <center>
         <h1> Auggar </h1>
         <h3> The Merveilles webring aggregator </h3>
+        <span>Search with Lieu</span>
     <main id="content">
 
     </main>
